--- a/try-except.ipynb
+++ b/try-except.ipynb
@@ -100,7 +100,7 @@
     "      else:\n",
     "        print(\"You win!\")\n",
     "except:\n",
-    "    print(\"You've entered an invalid value, try again and choose a number between 0-2.\")"
+    "    print(\"You've entered an invalid value, please try again and choose a number between 0-2.\")"
    ]
   }
  ],
